k8s/prod/3.server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: site15-prod
  name: site15-server
  labels:
    app: site15-server
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: site15-server-container
  template:
    metadata:
      namespace: site15-prod
      labels:
        pod: site15-server-container
    spec:
      containers:
        - name: site15-server
          image: site15/site15-ru-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 128Mi
              cpu: 500m
      imagePullSecrets:
        - name: regcred
