k8s/prod/4.frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: site15-prod
  name: site15-frontend-service
spec:
  selector:
    pod: site15-frontend-container
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
